tests/rosetta/out/C/caesar-cipher-1.error
cc: exit status 1
/tmp/caesar-cipher-1.c: In function ‘ord’:
/tmp/caesar-cipher-1.c:72:29: warning: passing argument 1 of ‘index_of_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   72 |   int idx = index_of_string(upper, ch);
      |                             ^~~~~
/tmp/caesar-cipher-1.c:35:34: note: expected ‘char *’ but argument is of type ‘const char *’
   35 | static int index_of_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/caesar-cipher-1.c:76:25: warning: passing argument 1 of ‘index_of_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   76 |   idx = index_of_string(lower, ch);
      |                         ^~~~~
/tmp/caesar-cipher-1.c:35:34: note: expected ‘char *’ but argument is of type ‘const char *’
   35 | static int index_of_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/caesar-cipher-1.c: In function ‘chr’:
/tmp/caesar-cipher-1.c:87:31: warning: passing argument 1 of ‘slice_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   87 |     char *tmp1 = slice_string(upper, n - 65, n - 64);
      |                               ^~~~~
/tmp/caesar-cipher-1.c:41:33: note: expected ‘char *’ but argument is of type ‘const char *’
   41 | static char *slice_string(char *s, int start, int end) {
      |                           ~~~~~~^
/tmp/caesar-cipher-1.c:91:31: warning: passing argument 1 of ‘slice_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   91 |     char *tmp2 = slice_string(lower, n - 97, n - 96);
      |                               ^~~~~
/tmp/caesar-cipher-1.c:41:33: note: expected ‘char *’ but argument is of type ‘const char *’
   41 | static char *slice_string(char *s, int start, int end) {
      |                           ~~~~~~^
/tmp/caesar-cipher-1.c: In function ‘encipher’:
/tmp/caesar-cipher-1.c:112:15: error: invalid operands to binary + (have ‘const char *’ and ‘const char *’)
  112 |     out = out + shiftRune(tmp3, k);
      |               ^ ~~~~~~~~~~~~~~~~~~
      |                 |
      |                 const char *
/tmp/caesar-cipher-1.c: In function ‘main’:
/tmp/caesar-cipher-1.c:122:45: warning: passing argument 2 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  122 |   char *tmp4 = concat_string("Plaintext: ", pt);
      |                                             ^~
/tmp/caesar-cipher-1.c:21:43: note: expected ‘char *’ but argument is of type ‘const char *’
   21 | static char *concat_string(char *a, char *b) {
      |                                     ~~~~~~^
/tmp/caesar-cipher-1.c:131:19: error: subscripted value is neither array nor pointer nor vector
  131 |     int key = tmp5[tmp6];
      |                   ^
/tmp/caesar-cipher-1.c:139:31: warning: passing argument 1 of ‘encipher’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  139 |     const char *ct = encipher(pt, key);
      |                               ^~
/tmp/caesar-cipher-1.c:107:28: note: expected ‘char *’ but argument is of type ‘const char *’
  107 | const char *encipher(char *s, int k) {
      |                      ~~~~~~^
/tmp/caesar-cipher-1.c:143:51: warning: passing argument 2 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  143 |     char *tmp12 = concat_string("  Enciphered: ", ct);
      |                                                   ^~
/tmp/caesar-cipher-1.c:21:43: note: expected ‘char *’ but argument is of type ‘const char *’
   21 | static char *concat_string(char *a, char *b) {
      |                                     ~~~~~~^
/tmp/caesar-cipher-1.c:145:48: warning: passing argument 1 of ‘decipher’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  145 |     printf("%s\n", "  Deciphered: " + decipher(ct, key));
      |                                                ^~
/tmp/caesar-cipher-1.c:118:28: note: expected ‘char *’ but argument is of type ‘const char *’
  118 | const char *decipher(char *s, int k) { return encipher(s, (26 - k % 26) % 26); }
      |                      ~~~~~~^
/tmp/caesar-cipher-1.c:145:37: error: invalid operands to binary + (have ‘char *’ and ‘const char *’)
  145 |     printf("%s\n", "  Deciphered: " + decipher(ct, key));
      |                    ~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~
      |                    |                  |
      |                    char *             const char *
/tmp/caesar-cipher-1.c: At top level:
/tmp/caesar-cipher-1.c:149:5: error: redefinition of ‘main’
  149 | int main() {
      |     ^~~~
/tmp/caesar-cipher-1.c:120:5: note: previous definition of ‘main’ with type ‘int()’
  120 | int main() {
      |     ^~~~
